pacman/pacman-f5-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: f5-gslb-pacman
  labels:
    app.kubernetes.io/name: f5-gslb-pacman
spec:
  # Added for f5 demonstration
  host: pacman.www-apps.jh21.dev06.red-chesterfield.com
  path: "/"
  to:
    kind: Service
    name: pacman
    weight: 100
  port:
    targetPort: 27017
  tls:
    termination: edge
  wildcardPolicy: None
