pacman/pacman-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: pacman
  labels:
    app.kubernetes.io/name: pacman
spec:
  path: "/"
  port:
    targetPort: 8080
  tls:
    termination: edge
  wildcardPolicy: None
  to:
    kind: Service
    name: pacman
    weight: 100
